[package]
name = "cauldron_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
futures = "0.3.26"
glob = "0.3.1"
image = "0.24.5"
neo4rs = "0.5.9"
pathdiff = "0.2.1"
rayon = "1.6.1"
tokio = "1.25.0"
walkdir = "2.3.2"
