[package]
name = "cauldron_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dont_disappear = "3.0.1"
futures = "0.3.26"
image = "0.24.5"
indicatif = "0.17.3"
pathdiff = "0.2.1"
rayon = "1.6.1"
serde = { version = "1.0.160", features = ["derive"] }
surrealdb = "1.0.0-beta.9+20230402"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
walkdir = "2.3.2"
